--- a/patrimony-management/src/App.css
+++ b/patrimony-management/src/App.css
@@ -14,3 +14,14 @@
   justify-content: center;  
   display: flex;
 }
+
+.asset {
+  background-color: rgb(230, 228, 228);
+  width: 600px;
+  border: 4px solid green;
+  padding: 50px;
+  margin: 20px;
+  position: fixed;  
+  left: 50%;  
+  margin-left: -300px;
+}
