--- a/patrimony-management/src/App.css
+++ b/patrimony-management/src/App.css
@@ -26,9 +26,23 @@
   margin-left: -300px;
 }
 
-.dashboard {
-  background-color: #294d2f;
-  color: aliceblue;
+.total {
+  background-color: #65f3f3;
+  color: black;
+  justify-content: center;
+  display: flex;
+}
+
+.variableIncTotal {
+  background-color: #82f7f7;
+  color: black;
+  justify-content: center;
+  display: flex;
+}
+
+.percentageIncTotal {
+  background-color: #c9f1f1;
+  color: black;
   justify-content: center;
   display: flex;
 }
@@ -39,13 +53,35 @@
 }
 
 .fieldCategA{ 
-  width: 200px;
-  border: 1px solid #000; 
-  padding: 5px;
+  width: 100%;
+  padding: 6px 20px;
+  margin: 1px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-.fieldCategB{ 
-  width: 40px;
-  border: 1px solid #000; 
-  padding: 5px;
+.readOnlyField{ 
+  width: 100%;
+  padding: 6px 20px;
+  margin: 1px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-align: center;
+  background-color: #d2f1f1;
+}
+
+input[type=submit] {
+  width: 30%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
