--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  height: 100vh; /* Magic here */
-  display: flex;
+  text-align: center;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .footer {
@@ -13,6 +13,25 @@
   background-color: #222222;
   justify-content: center;  
   display: flex;
+}
+
+.App-logo {
+  height: 40vmin;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #09d3ac;
 }
 
 .asset {
