--- a/src/components/asset/Asset.css
+++ b/src/components/asset/Asset.css
@@ -13,3 +13,10 @@
     border-radius: 4px;
     cursor: pointer;
   }
+
+  .auth-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
