--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -21,19 +21,19 @@ body, html, .App, #root, .auth-wrapper {
   height: 100%;
 }
 
-.navbar-light {
+/* .navbar-light {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-}
+} */
 
-.auth-wrapper {
+/* .auth-wrapper {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: left;
-}
+} */
 
-.auth-inner {
+/* .auth-inner {
   width: 450px;
   margin: auto;
   background: #ffffff;
@@ -41,23 +41,23 @@ body, html, .App, #root, .auth-wrapper {
   padding: 40px 55px 45px 55px;
   border-radius: 15px;
   transition: all .3s;
-}
+} */
 
-.auth-wrapper .form-control:focus {
+/* .auth-wrapper .form-control:focus {
   border-color: #38f816;
   box-shadow: none;
-}
+} */
 
-.auth-wrapper h3 {
+/* .auth-wrapper h3 {
   text-align: center;
   margin: 0;
   line-height: 1;
   padding-bottom: 20px;
-}
+} */
 
-.custom-control-label {
+/* .custom-control-label {
   font-weight: 400;
-}
+} */
 
 .forgot-password,
 .forgot-password a {
