--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -18,3 +18,10 @@
     justify-content: center;
     display: flex;
   }
+
+  h2 {
+    color: rgb(5, 7, 92);
+    justify-content: center;
+    display: flex;
+    font-size: calc(30px + 2vmin);
+  }
