Implement spinner before load chart

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -25,3 +25,12 @@
     display: flex;
     font-size: calc(30px + 2vmin);
   }
+
+  .spinner {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
