--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
-  .App {
-    height: 100vh; /* Magic here */
+  .auth-inner {
+    width: 450px;
+    margin: auto;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+
+  .auth-wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: center;
+    flex-direction: column;
+    text-align: left;
   }
-  
+
   .footer {
     position: absolute;
     bottom: 0;
@@ -14,20 +23,4 @@
     background-color: #222222;
     justify-content: center;  
     display: flex;
-  }
-  
-  .checkbox {
-    display: inline-block;
-    float: left;
-  }
-  
-  input[type=submit] {
-    width: 30%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
   }
