--- a/src/components/investment/Investment.css
+++ b/src/components/investment/Investment.css
@@ -18,9 +18,9 @@
     border-radius: 4px;
     box-sizing: border-box;
     text-align: center;
-    background-color: #e3f0f0;
+    background-color: #d2e4e9;
   }
 
 .navbar-custom {
-    background-color: #0e62925e;
+    background-color:  rgb(133, 191, 238);
 }
